fixed navigation displaying improperly on mobile

--- a/MedNetBranding/css/masterpage.css
+++ b/MedNetBranding/css/masterpage.css
@@ -1,10 +1,6 @@
 .page-content .body-text {
     max-width:970px;
 }
-.page-content-row{
-    display:table;
-    width:100%;
-}
 .page-content-container {
     width: 100%;
     margin-top: -50px;
@@ -87,6 +83,10 @@ div[role="dialog"] *,
     -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
     box-sizing: content-box;
+}
+img{
+    max-width:100%;
+    height:auto;
 }
 .ms-InlineSearch-Outline-Baseline{
     height:24px;
@@ -498,7 +498,9 @@ header h2{
 }
 
 #sideNavBox {
-    padding-bottom:50px;
+    width: 16.66666667%;
+    margin:0;
+    padding: 0 0 0 0;
 }
 
 #sideNavBox .selected ul {
@@ -738,7 +740,7 @@ footer a:hover {
 @media screen and (max-width: 400px){
     .container h1{
         font-size:27px;
-        margin-top:0;
+        margin-top:10px;
     }
     .page-content{
         padding:0;
@@ -881,14 +883,15 @@ footer a:hover {
     }
 }
 @media screen and (min-width: 768px){
-    #sideNavBox {
-        width: 16.66666667%;
-        margin:0;
-        padding: 0 0 0 0;
-    }
+
     #sideNavBox a {
         color:#000;
         /*margin-left:16px;*/
+    }
+    .page-content-row{
+        display:table;
+        width:100%;
+        margin:0 auto;
     }
 }
 
